# real-state-db

./: .env_public  .gitignore  CMakeLists.txt  estrutura.sql  main.cpp  readme.md
database/: example.cpp  example.h  settings.cpp  settings.h
database/tables/: BaseTable.cpp  BaseTable.h  CertidaoImovel.cpp  CertidaoImovel.h  ContratoAluguel.cpp  ContratoAluguel.h  CorretorAutonomo.cpp  CorretorAutonomo.h  Fiador.cpp  Fiador.h  Imovel.cpp  Imovel.h  Inquilino.cpp  Inquilino.h  Oferta.cpp  Oferta.h  Proposta.cpp  Proposta.h  Proprietario.cpp  Proprietario.h  Telefone.cpp  Telefone.h  Visita.cpp  Visita.h
docs/: DER_Imobiliaria.drawio
interface/: UserInterface.cpp  UserInterface.h
